tests/type-errors/view_error_unknown.arl
archetype view_error_unknown

variable res : option<string> = none

entry exec() {
  res := self.get(2, 3)
}
